--- a/index.ipynb
+++ b/index.ipynb
@@ -457,11 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = "
+    "recoleta_marker = neighborhood_markers[1]"
    ]
   },
   {
